# workllm

./: .gitignore  README.md  hello.py  pyproject.toml
workllm/tests/integration/: test_productivity_integration.py  test_retrieval.py
workllm/tests/unit/: test_productivity_unit.py
workllm/workllm/: cli.py  llm_clients.py  productivity.py  prompts.py  rag.py  utils.py
