[project]
name = "workllm"
version = "0.4"
description = "LLM-powered productivity toolkit for engineers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "chromadb>=0.4.15",
    "ollama>=0.1.7",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "python-magic>=0.4.27",
    "pytest>=8.3.4",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "typing-extensions>=4.9.0",
    "unstructured>=0.12.0",
    "pdfminer>=20191125",
    "pdfminer-six>=20240706",
    "pi-heif>=0.21.0",
    "unstructured-inference>=0.8.6",
    "pdf2image>=1.17.0",
    "unstructured-pytesseract>=0.3.13",
    "pygithub>=2.3.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-text-splitters>=0.3.5",
    "langchain-huggingface>=0.1.2",
    "langchain-chroma>=0.2.0",
    "rank-bm25>=0.2.2",
    "ruff>=0.9.3",
]

[project.scripts]
workllm = "workllm.cli:cli"

[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]
lint.ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "E501",  # line too long (handled by line-length)
]

[tool.setuptools]
packages = ["workllm"]
include-package-data = true
package-dir = {"" = "workllm"}
